continuing the road to zebra : - the biblio add begins to work. - the biblio modif begins to work.
(still without doing anything on zebra)
(no new change in updatedatabase)

--- a/koha-tmpl/intranet-tmpl/default/en/acqui.simple/addbiblio.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui.simple/addbiblio.tmpl
@@ -378,15 +378,15 @@
 				<input type="hidden" name="tag_mandatory" value="<!-- TMPL_VAR NAME="tag_mandatory" -->">
 		<!-- /TMPL_LOOP -->
 		</div>
-		<!-- TMPL_IF name="oldbiblionumtagfield" -->
-			<input type="hidden" name="tag" value="<!-- TMPL_VAR NAME="oldbiblionumtagfield" -->">
-			<input type="hidden" name="subfield" value="<!-- TMPL_VAR NAME="oldbiblionumtagsubfield" -->">
-			<input type="hidden" name="field_value" value="<!-- TMPL_VAR NAME="oldbiblionumber" -->">
+		<!-- TMPL_IF name="biblionumtagfield" -->
+			<input type="hidden" name="tag" value="<!-- TMPL_VAR NAME="biblionumtagfield" -->">
+			<input type="hidden" name="subfield" value="<!-- TMPL_VAR NAME="biblionumtagsubfield" -->">
+			<input type="hidden" name="field_value" value="<!-- TMPL_VAR NAME="biblionumber" -->">
 			<input type="hidden" name="mandatory" value="0">
 			<input type="hidden" name="kohafield" value="<!-- TMPL_VAR NAME="kohafield" -->">
-			<input type="hidden" name="tag" value="<!-- TMPL_VAR NAME="oldbiblioitemnumtagfield" -->">
-			<input type="hidden" name="subfield" value="<!-- TMPL_VAR NAME="oldbiblioitemnumtagsubfield" -->">
-			<input type="hidden" name="field_value" value="<!-- TMPL_VAR NAME="oldbiblioitemnumber" -->">
+			<input type="hidden" name="tag" value="<!-- TMPL_VAR NAME="biblioitemnumtagfield" -->">
+			<input type="hidden" name="subfield" value="<!-- TMPL_VAR NAME="biblioitemnumtagsubfield" -->">
+			<input type="hidden" name="field_value" value="<!-- TMPL_VAR NAME="biblioitemnumber" -->">
 			<input type="hidden" name="mandatory" value="0">
 			<input type="hidden" name="kohafield" value="<!-- TMPL_VAR NAME="kohafield" -->">
 			<input type="hidden" name="tag_mandatory" value="<!-- TMPL_VAR NAME="tag_mandatory" -->">
