--- a/koha-tmpl/intranet-tmpl/default/en/acqui.simple/additem.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui.simple/additem.tmpl
@@ -5,16 +5,16 @@
 	<input type="hidden" name="bibid" value="<!-- TMPL_VAR NAME="bibid" -->">
 	<div class="tabbed">
 		<h1 class="catalogue"><!-- TMPL_VAR name="title" --> (<!-- TMPL_VAR name="author" --> biblionumber #<!-- TMPL_VAR NAME="biblionumber" -->)</h1>
-		<a href="addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
+		<a href="addbiblio.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
 			Edit biblio
 		</a>
-		<a href="../MARCdetail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
+		<a href="../MARCdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
 			MARC
 		</a>
-		<a href="../detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
+		<a href="../detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
 			Normal
 		</a>
-		<a href="../ISBDdetail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
+		<a href="../ISBDdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
 			ISBD
 		</a>
 	</div>
