--- a/koha-tmpl/intranet-tmpl/default/en/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/catalogue/detail.tmpl
@@ -10,7 +10,7 @@
 		<a href="acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&op=duplicate" class="button catalogue">
 			Duplicate
 		</a>
-		<a href="acqui.simple/additem.pl?biblionumber=<!-- TMPL_VAR name="biblionumber"-->" class="button catalogue">
+		<a href="acqui.simple/additem.pl?biblionumber=<!-- TMPL_VAR name="biblionumber"-->&biblioitem=<!-- TMPL_VAR name="biblioitemnumber" -->" class="button catalogue">
 			Edit item
 		</a>
 	
