--- a/koha-tmpl/intranet-tmpl/default/en/catalogue/catalogue-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/catalogue/catalogue-home.tmpl
@@ -22,10 +22,15 @@
 		
 		<p><label class="label100" for="dewey">Dewey:</label></td><td><input type="text"  size="25" id="dewey"  name="dewey"></p>
 
-<p>		<label class="label100" for="class">Class:</label><select name="class" id="class" size="1">
-			<option value=""> Any
-			<!-- TMPL_VAR NAME="classlist" -->
-			</select></p>
+<p>		<label class="label100" for="class">Class:</label>
+	<select name="class">
+		<option value="">Default</option>
+	<!-- TMPL_LOOP name="itemtypeloop" -->
+		<option value="<!-- TMPL_VAR name="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR name="description" --></option>
+	<!-- /TMPL_LOOP -->
+	</select>
+</form>
+</p>
 			
 					<p><label class="label100">Search Style:</label><input type="radio" name="ttype" id=" ttype" value="normal" checked>Normal
 			<input type="radio" name="ttype" value="exact">Exact</p>
