minor change in css (margin between buttons)

--- a/koha-tmpl/intranet-tmpl/default/en/includes/common-style.css
+++ b/koha-tmpl/intranet-tmpl/default/en/includes/common-style.css
@@ -10,6 +10,9 @@ input {
 	display:inline;
 }
 
+textarea {
+	font-size:10pt;
+}
 ul {
 	margin-top:0px;
 	margin-bottom:0px;
@@ -24,10 +27,6 @@ p {
 	clear:left;
 }
 
-textarea {
-	font-size:10pt;
-	font-family:arial,sans-serif;
-}
 .center {
 	text-align:center;
 }
@@ -53,13 +52,12 @@ label {
 	text-align: center;
 	font-family: Arial;
 	font-size:12px;
-	padding: 0px 5px 0px 5px;
-	margin:2px;
+	padding: 2px 5px 2px 5px;
+	margin:5px;
+/* 	margin-bottom:5px; */
 	display:inline;
 	position:static;
 	border : 1px solid black;
-/*	border-width: 1px;
-	border-color: black;*/
 	text-decoration: none;
 	cursor:pointer;
 	vertical-align:middle;
@@ -369,11 +367,6 @@ position: fixed;
 	text-align:right;
 }
 
-.user {
-	padding-top: 30px;
-	padding-bottom:0px;
-	text-align:right;
-}
 .koha {
 	text-align:center;
 	background-image:url("/intranet-tmpl/default/images/background-mem.gif");
